[package]
name = "finance"
version = "0.0.1"
authors = ["pow2n10"]
description = "finance-rust is a simple common finance mathematics in rust."
documentation = "http://blog.pownm.com/finance-rust/finance/"
repository = "https://github.com/pow2n10/finance-rust"
readme = "READMD.md"
keywords = ["finance","math","mathematics"]
license = "MIT"
